SERVER-43576 DBClientRS does not propagate applicationName