src/mongo/client/mongo_uri.h
@@ -238,9 +238,14 @@ public:
     // server (say a member of a replica-set), you can pass in its HostAndPort information to
     // get a new URI with the same info, except type() will be MASTER and getServers() will
     // be the single host you pass in.
-    MongoURI cloneURIForServer(HostAndPort hostAndPort) const {
+    MongoURI cloneURIForServer(HostAndPort hostAndPort, StringData applicationName) const {
         auto out = *this;
         out._connectString = ConnectionString(std::move(hostAndPort));
+
+        if (!out.getAppName()) {
+            out._options["appName"] = applicationName.toString();
+        }
+
         return out;
     }
 
